Add DB and Entity Framework

--- a/MyAccounts/MyAccounts/Web.config
+++ b/MyAccounts/MyAccounts/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyAccounts-20160801102840.mdf;Initial Catalog=aspnet-MyAccounts-20160801102840;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SkillTreeHomeworkEntities" connectionString="metadata=res://*/Models.WebEnities.csdl|res://*/Models.WebEnities.ssdl|res://*/Models.WebEnities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SkillTreeHomework.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
