--- a/MyAccounts/MyAccounts/MyAccounts.csproj
+++ b/MyAccounts/MyAccounts/MyAccounts.csproj
@@ -160,6 +160,10 @@
       <DependentUpon>WebEnities.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IUnitOfWork.cs" />
+    <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Services\AccountsService.cs" />
   </ItemGroup>
   <ItemGroup>
