加入紅藍色css class及razor helper讓類別依照需求換色

--- a/MyAccounts/MyAccounts/MyAccounts.csproj
+++ b/MyAccounts/MyAccounts/MyAccounts.csproj
@@ -194,6 +194,7 @@
     <Content Include="Models\WebEnities.edmx.diagram">
       <DependentUpon>WebEnities.edmx</DependentUpon>
     </Content>
+    <Content Include="App_Code\RazorHelper.cshtml" />
     <None Include="Scripts\jquery-3.1.0.intellisense.js" />
     <Content Include="Models\WebEnities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
