--- a/MyAccounts/MyAccounts/MyAccounts.csproj
+++ b/MyAccounts/MyAccounts/MyAccounts.csproj
@@ -188,6 +188,7 @@
       <DependentUpon>WebEnities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountsModels.cs" />
+    <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MetaData\AccountBookMetaData.cs" />
     <Compile Include="Models\ViewModels\AccountsViewModels.cs" />
