--- a/MyAccounts/MyAccounts/packages.config
+++ b/MyAccounts/MyAccounts/packages.config
@@ -23,10 +23,11 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="MvcPaging" version="2.1.7" targetFramework="net461" />
