--- a/MyAccounts/MyAccounts/packages.config
+++ b/MyAccounts/MyAccounts/packages.config
@@ -34,5 +34,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
