--- a/MyAccounts/MyAccounts/Web.config
+++ b/MyAccounts/MyAccounts/Web.config
@@ -7,30 +7,56 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyAccounts-20160801102840.mdf;Initial Catalog=aspnet-MyAccounts-20160801102840;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="SkillTreeHomeworkEntities" connectionString="metadata=res://*/Models.WebEnities.csdl|res://*/Models.WebEnities.ssdl|res://*/Models.WebEnities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SkillTreeHomework.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Elmah.Sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFileName=|DataDirectory|\SkillTreeHomework.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
+    <add key="RouteDebugger:Enabled" value="false" />
+    <add key="MvcElmahDashboardConnectionName" value="Elmah.Sql" />
+    <add key="MvcElmahDashboardCulture" value="zh-tw" />
+    <add key="MvcElmahDashboardLogCount" value="5" />
+    <add key="MvcElmahDashboardHeartBeatUrl" value="" />
+    <add key="MvcElmahDashboardHeartBeatInterval" value="00:01:00" />
+    <add key="MvcElmahDashboardHeartBeatDirectFromBrowser" value="false" />
+    <add key="MvcElmahDashboardUserAgentInfoProvider" value="Caption=User Agent String.Com;InfoUrl=http://www.useragentstring.com/;ServiceUrl=http://www.useragentstring.com/?uas={value}&amp;getJSON=all" />
+    <add key="MvcElmahDashboardRemoteAddressInfoProvider" value="Caption=FreeGeoIP.net;InfoUrl=http://freegeoip.net/;ServiceUrl=https://freegeoip.net/json/{value};Latitude=latitude;Longitude=longitude" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-  <pages>
-			<namespaces>
-				<add namespace="MvcPaging" />
-			</namespaces>
-		</pages></system.web>
+    <pages>
+      <namespaces>
+        <add namespace="MvcPaging" />
+      </namespaces>
+    </pages>
+    <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -96,4 +122,8 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <elmah>
+    <security allowRemoteAccess="false" />
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="Elmah.Sql" />
+  </elmah>
 </configuration>
